[metadata]
name = pynet
version = attr: pynet.__version__.__version__
url = https://github.com/cancub/pynet
project_urls =
    Source = https://github.com/cancub/pynet
author = Alf O''Kenney
author_email = alf@okenney.ca
description = Suite of tools for network simulation
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = network, simulation, osi
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
